[package]
name = "ecs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = { version = "0.1", default-features = false, features = ["std"] }
tracing-subscriber = { version = "0.3.1", features = [ "registry", "env-filter" ]}

env_logger = "0.10"
log = "0.4.20"

thiserror = "1.0"
